--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "classnames": "^2.1.3",
     "color": "^1.0.3",
     "crossfilter": "^1.3.12",
-    "cxs": "^5.0.0",
+    "cxs": "^3.0.4",
     "d3": "^3.5.17",
     "dc": "^2.0.0",
     "diff": "^3.2.0",
@@ -26,6 +26,7 @@
     "iframe-resizer": "^3.5.11",
     "inflection": "^1.7.1",
     "isomorphic-fetch": "^2.2.1",
+    "js-base64": "^2.1.9",
     "js-cookie": "^2.1.2",
     "jsrsasign": "^7.1.0",
     "leaflet": "^1.0.1",
